--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,8 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
+		<div style="display: contents" class="h-full overflow-hidden">
+			%sveltekit.body%
+		</div>
 	</body>
 </html>
